--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   </head>
   <body>
-    <h1>Firebase掲示板</h1>
+    <h1>掲示板</h1>
     <p id="status">ログイン中...</p>
     <form id="msgForm">
       <input type="text" name="message" required placeholder="メッセージを入力" />
