--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>さかな帝国.com</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>匿名掲示板</h1>
 
-  <h2>スレ立て</h2>
-  <input type="text" id="threadTitle" placeholder="スレッドタイトル">
-  <button id="createThreadBtn">スレ立て</button>
+  <section id="threadSection">
+    <h2>スレ一覧</h2>
+    <input type="text" id="searchThread" placeholder="スレ検索" />
+    <ul id="threadList"></ul>
 
-  <h2>コメント投稿</h2>
-  <select id="threadList"></select><br>
-  <textarea id="commentText" placeholder="コメント"></textarea><br>
-  <button id="postCommentBtn">投稿</button>
+    <h3>スレ立て</h3>
+    <input type="text" id="threadTitle" placeholder="スレッドタイトル" />
+    <button id="createThreadBtn">スレ立て</button>
+  </section>
 
-  <h2>コメント一覧</h2>
-  <ul id="commentList"></ul>
+  <section id="commentSection" style="display:none;">
+    <h2>コメント投稿</h2>
+    <div id="currentThreadTitle"></div>
+    <textarea id="commentText" placeholder="コメント"></textarea><br />
+    <button id="postCommentBtn">コメント投稿</button>
+    <button id="backToThreadsBtn">スレ一覧に戻る</button>
 
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
-  <script src="script.js"></script>
+    <h3>コメント一覧</h3>
+    <ul id="commentList"></ul>
+  </section>
+
+  <script type="module" src="script.js"></script>
 </body>
 </html>
