--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <ul id="commentList"></ul>
   </section>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
